--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>{{ page.title }}</title>
@@ -17,15 +17,9 @@
 </head>
 <body>
 
-<!-- ClickTale Top part -->
-<script type="text/javascript">
-var WRInitTime=(new Date()).getTime();
-</script>
-<!-- ClickTale end of Top part -->
-
 <div class="site">
   <div class="title">
-    <a href="/">Tom Preston-Werner</a>
+    <a href="/">XiDaBei</a>
     <a class="extra" href="/">home</a>
   </div>
     {{ content }}
