--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
 
 <div class="site">
   <div class="title">
-    <a href="https://xidabei.github.io/blog">XiDaBei</a>
-    <a class="extra" href="https://xidabei.github.io/blog">home</a>
+    <a href="https://xidabei.github.io/Blog">XiDaBei</a>
+    <a class="extra" href="https://xidabei.github.io/Blog">home</a>
   </div>
     {{ content }}
 </div>
